--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://9b3677fd-3900-4ce7-8d1c-e2a5cabb7687.preview.emergentagent.com
 WDS_SOCKET_PORT=443
